<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">优游日本</string>
    <string name="action_settings">Settings</string>
    <string name="main_tab_home">首页</string>
    <string name="main_tab_recommend">推荐</string>
    <string name="main_tab_peripheral">周边</string>
    <string name="main_tab_collection">收藏</string>
    <string name="main_tab_hot_city">热门城市</string>
    <string name="main_tab_choose_in_map">从地图选择</string>
    <string name="main_bottom_info">NNT Communications Corporation</string>
    <string name="title_activity_h5">优游日本</string>
    <string name="hello_world">Hello world!!!</string>
    <string name="close_text">关闭</string>
    <string name="back_text">返回</string>
    <string name="setup_text">设置</string>
    <drawable name="btn_normal">#ef5050</drawable>
    <drawable name="btn_pressed">#f46969</drawable>

</resources>
